--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -9,6 +9,8 @@ set(THREADS_PREFER_PTHREAD_FLAG true)
 find_package(Threads REQUIRED)
 
 # SOURCES
+set(GEOMETRY_PLANE_TEST "geometry/plane")
+set(GEOMETRY_SPACE_TEST "geometry/space")
 set(GEOMETRY_TEST "geometry")
 set(GRAPHS_TEST "graphs")
 set(GRAPHS_ALGORITHMS_TEST "${GRAPHS_TEST}/algorithms")
@@ -17,10 +19,12 @@ set(SEQUENCES_TEST "sequences")
 set(STRUCTURES_TEST "structures")
 set(TEXT_TEST "text")
 
-set(GEOMETRY_TEST_SOURCES
-    "${GEOMETRY_TEST}/closest_points_test.cpp"
-    "${GEOMETRY_TEST}/convex_hull_test.cpp"
-    "${GEOMETRY_TEST}/points_sorting_test.cpp")
+set(GEOMETRY_PLANE_TEST_SOURCES
+    "${GEOMETRY_PLANE_TEST}/geometry2d_test.cpp"
+    "${GEOMETRY_PLANE_TEST}/closest_points_test.cpp"
+    "${GEOMETRY_PLANE_TEST}/convex_hull_test.cpp")
+set(GEOMETRY_SPACE_TEST_SOURCES
+)
 set(GRAPHS_TEST_SOURCES
     "${GRAPHS_TEST}/directed_graph_test.cpp"
     "${GRAPHS_TEST}/multipartite_graph_test.cpp"
@@ -55,6 +59,8 @@ set(TEXT_TEST_SOURCES
     "${TEXT_TEST}/trie_test.cpp")
 
 set(TEST_SOURCES
+    "${GEOMETRY_PLANE_TEST_SOURCES}"
+    "${GEOMETRY_SPACE_TEST_SOURCES}"
     "${GEOMETRY_TEST_SOURCES}"
     "${GRAPHS_TEST_SOURCES}"
     "${GRAPHS_ALGORITHMS_TEST_SOURCES}"
