Rename geometry subdirectories

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,8 +3,8 @@ cmake_minimum_required(VERSION 3.10)
 #SOURCES
 set(ALGOLIB "algolib")
 set(GEOMETRY "${ALGOLIB}/geometry")
-set(GEOMETRY_PLANE "${GEOMETRY}/2d")
-set(GEOMETRY_SPACE "${GEOMETRY}/3d")
+set(GEOMETRY_PLANE "${GEOMETRY}/dim2")
+set(GEOMETRY_SPACE "${GEOMETRY}/dim3")
 set(GRAPHS "${ALGOLIB}/graphs")
 set(GRAPHS_ALGORITHMS "${GRAPHS}/algorithms")
 set(MATHMAT "${ALGOLIB}/mathmat")
