--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -10,8 +10,8 @@ find_package(Threads REQUIRED)
 
 # SOURCES
 set(GEOMETRY_TEST "geometry")
-set(GEOMETRY_PLANE_TEST "${GEOMETRY_TEST}/2d")
-set(GEOMETRY_SPACE_TEST "${GEOMETRY_TEST}/3d")
+set(GEOMETRY_PLANE_TEST "${GEOMETRY_TEST}/dim2")
+set(GEOMETRY_SPACE_TEST "${GEOMETRY_TEST}/dim3")
 set(GRAPHS_TEST "graphs")
 set(GRAPHS_ALGORITHMS_TEST "${GRAPHS_TEST}/algorithms")
 set(MATHMAT_TEST "mathmat")
