--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -25,7 +25,8 @@ set(GEOMETRY_PLANE_TEST_SOURCES
     "${GEOMETRY_PLANE_TEST}/geometry_2d_test.cpp"
     "${GEOMETRY_PLANE_TEST}/vector_2d_test.cpp")
 set(GEOMETRY_SPACE_TEST_SOURCES
-    "${GEOMETRY_SPACE_TEST}/geometry_3d_test.cpp")
+    "${GEOMETRY_SPACE_TEST}/geometry_3d_test.cpp"
+    "${GEOMETRY_SPACE_TEST}/vector_3d_test.cpp")
 set(GRAPHS_TEST_SOURCES
     "${GRAPHS_TEST}/directed_graph_test.cpp"
     "${GRAPHS_TEST}/multipartite_graph_test.cpp"
