--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,6 +7,8 @@ set(GEOMETRY_PLANE "${GEOMETRY}/dim2")
 set(GEOMETRY_SPACE "${GEOMETRY}/dim3")
 set(GRAPHS "${ALGOLIB}/graphs")
 set(GRAPHS_ALGORITHMS "${GRAPHS}/algorithms")
+set(GRAPHS_NEW "${ALGOLIB}/graphs_new")
+# set(GRAPHS_NEW_ALGORITHMS "${GRAPHS_NEW}/algorithms")
 set(MATHMAT "${ALGOLIB}/mathmat")
 set(SEQUENCES "${ALGOLIB}/sequences")
 set(STRUCTURES "${ALGOLIB}/structures")
@@ -42,6 +44,13 @@ set(GRAPHS_ALGORITHMS_SOURCES
     "${GRAPHS_ALGORITHMS}/searching_strategy.cpp"
     "${GRAPHS_ALGORITHMS}/strongly_connected_components.cpp"
     "${GRAPHS_ALGORITHMS}/topological_sorting.cpp")
+set(GRAPHS_NEW_SOURCES
+    "${GRAPHS_NEW}/directed_graph.cpp"
+    "${GRAPHS_NEW}/edge.cpp"
+    "${GRAPHS_NEW}/graph.cpp"
+    "${GRAPHS_NEW}/simple_graph.cpp"
+    "${GRAPHS_NEW}/properties.cpp"
+    "${GRAPHS_NEW}/vertex.cpp")
 set(MATHMAT_SOURCES
     "${MATHMAT}/equation.cpp"
     "${MATHMAT}/equation_system.cpp"
@@ -67,6 +76,7 @@ set(SOURCES
     "${GEOMETRY_SPACE_SOURCES}"
     "${GRAPHS_SOURCES}"
     "${GRAPHS_ALGORITHMS_SOURCES}"
+    "${GRAPHS_NEW_SOURCES}"
     "${MATHMAT_SOURCES}"
     "${SEQUENCES_SOURCES}"
     "${STRUCTURES_SOURCES}"
