--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,7 +8,7 @@ set(GEOMETRY_SPACE "${GEOMETRY}/dim3")
 set(GRAPHS "${ALGOLIB}/graphs")
 set(GRAPHS_ALGORITHMS "${GRAPHS}/algorithms")
 set(GRAPHS_NEW "${ALGOLIB}/graphs_new")
-# set(GRAPHS_NEW_ALGORITHMS "${GRAPHS_NEW}/algorithms")
+set(GRAPHS_NEW_ALGORITHMS "${GRAPHS_NEW}/algorithms")
 set(MATHMAT "${ALGOLIB}/mathmat")
 set(SEQUENCES "${ALGOLIB}/sequences")
 set(STRUCTURES "${ALGOLIB}/structures")
@@ -53,6 +53,11 @@ set(GRAPHS_NEW_SOURCES
     "${GRAPHS_NEW}/tree_graph.cpp"
     "${GRAPHS_NEW}/undirected_graph.cpp"
     "${GRAPHS_NEW}/vertex.cpp")
+set(GRAPHS_NEW_ALGORITHMS_SOURCES
+    "${GRAPHS_NEW_ALGORITHMS}/cutting.cpp"
+    "${GRAPHS_NEW_ALGORITHMS}/minimal_spanning_tree.cpp"
+    "${GRAPHS_NEW_ALGORITHMS}/searching.cpp"
+    "${GRAPHS_NEW_ALGORITHMS}/searching_strategy.cpp")
 set(MATHMAT_SOURCES
     "${MATHMAT}/equation.cpp"
     "${MATHMAT}/equation_system.cpp"
@@ -79,6 +84,7 @@ set(SOURCES
     "${GRAPHS_SOURCES}"
     "${GRAPHS_ALGORITHMS_SOURCES}"
     "${GRAPHS_NEW_SOURCES}"
+    "${GRAPHS_NEW_ALGORITHMS_SOURCES}"
     "${MATHMAT_SOURCES}"
     "${SEQUENCES_SOURCES}"
     "${STRUCTURES_SOURCES}"
