--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -51,6 +51,7 @@ set(GRAPHS_NEW_TEST_SOURCES
 set(GRAPHS_NEW_ALGORITHMS_TEST_SOURCES
     "${GRAPHS_NEW_ALGORITHMS_TEST}/cutting_test.cpp"
     "${GRAPHS_NEW_ALGORITHMS_TEST}/lowest_common_ancestor_test.cpp"
+    "${GRAPHS_NEW_ALGORITHMS_TEST}/matching_test.cpp"
     "${GRAPHS_NEW_ALGORITHMS_TEST}/minimal_spanning_tree_test.cpp"
     "${GRAPHS_NEW_ALGORITHMS_TEST}/searching_test.cpp"
     "${GRAPHS_NEW_ALGORITHMS_TEST}/strongly_connected_components_test.cpp"
