Hash and lambdas fixes

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,8 +3,8 @@ cmake_minimum_required(VERSION 3.10)
 #SOURCES
 set(ALGOLIB "algolib")
 set(GEOMETRY "${ALGOLIB}/geometry")
-set(GEOMETRY_PLANE "${GEOMETRY}/dim2")
-set(GEOMETRY_SPACE "${GEOMETRY}/dim3")
+set(GEOMETRY_DIM2 "${GEOMETRY}/dim2")
+set(GEOMETRY_DIM3 "${GEOMETRY}/dim3")
 set(GRAPHS "${ALGOLIB}/graphs")
 set(GRAPHS_ALGORITHMS "${GRAPHS}/algorithms")
 set(MATHMAT "${ALGOLIB}/mathmat")
@@ -14,16 +14,16 @@ set(TEXT "${ALGOLIB}/text")
 
 set(GEOMETRY_SOURCES
     "${GEOMETRY}/geometry_object.cpp")
-set(GEOMETRY_PLANE_SOURCES
-    "${GEOMETRY_PLANE}/closest_points.cpp"
-    "${GEOMETRY_PLANE}/convex_hull.cpp"
-    "${GEOMETRY_PLANE}/geometry_2d.cpp"
-    "${GEOMETRY_PLANE}/point_2d.cpp"
-    "${GEOMETRY_PLANE}/vector_2d.cpp")
-set(GEOMETRY_SPACE_SOURCES
-    "${GEOMETRY_SPACE}/geometry_3d.cpp"
-    "${GEOMETRY_SPACE}/point_3d.cpp"
-    "${GEOMETRY_SPACE}/vector_3d.cpp")
+set(GEOMETRY_DIM2_SOURCES
+    "${GEOMETRY_DIM2}/closest_points.cpp"
+    "${GEOMETRY_DIM2}/convex_hull.cpp"
+    "${GEOMETRY_DIM2}/geometry_2d.cpp"
+    "${GEOMETRY_DIM2}/point_2d.cpp"
+    "${GEOMETRY_DIM2}/vector_2d.cpp")
+set(GEOMETRY_DIM3_SOURCES
+    "${GEOMETRY_DIM3}/geometry_3d.cpp"
+    "${GEOMETRY_DIM3}/point_3d.cpp"
+    "${GEOMETRY_DIM3}/vector_3d.cpp")
 set(GRAPHS_SOURCES
     "${GRAPHS}/directed_graph.cpp"
     "${GRAPHS}/edge.cpp"
@@ -64,8 +64,8 @@ set(TEXT_SOURCES
 
 set(SOURCES
     "${GEOMETRY_SOURCES}"
-    "${GEOMETRY_PLANE_SOURCES}"
-    "${GEOMETRY_SPACE_SOURCES}"
+    "${GEOMETRY_DIM2_SOURCES}"
+    "${GEOMETRY_DIM3_SOURCES}"
     "${GRAPHS_SOURCES}"
     "${GRAPHS_ALGORITHMS_SOURCES}"
     "${MATHMAT_SOURCES}"
