--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -48,6 +48,7 @@ set(MATHMAT_TEST_SOURCES
     "${MATHMAT_TEST}/maths_test.cpp"
     "${MATHMAT_TEST}/primes_test.cpp")
 set(SEQUENCES_TEST_SOURCES
+    "${SEQUENCES_TEST}/longest_common_subsequence_test.cpp"
     "${SEQUENCES_TEST}/longest_increasing_subsequence_test.cpp"
     "${SEQUENCES_TEST}/maximum_subarray_test.cpp"
     "${SEQUENCES_TEST}/sorting_test.cpp")
