--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ set(INCLUDE_DIR "${PROJECT_SOURCE_DIR}/include")
 set(SRC_DIR "${PROJECT_SOURCE_DIR}/src")
 set(TEST_DIR "${PROJECT_SOURCE_DIR}/test")
 set(OUTPUT_DIR "${PROJECT_SOURCE_DIR}/buildOut")
-set(EXE_OUTPUT_DIR "${OUTPUT_DIR}/bin")
+set(TEST_EXE_OUTPUT_DIR "${OUTPUT_DIR}/test")
 set(LIB_OUTPUT_DIR "${OUTPUT_DIR}/dist")
 set(DOCS_OUTPUT_DIR "${OUTPUT_DIR}/docs")
 
