Separate directory for heaps

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,6 +10,7 @@ set(GRAPHS_ALGORITHMS "${GRAPHS}/algorithms")
 set(MATHS "${ALGOLIB}/maths")
 set(SEQUENCES "${ALGOLIB}/sequences")
 set(STRUCTURES "${ALGOLIB}/structures")
+set(STRUCTURES_HEAPS "${STRUCTURES}/heaps")
 set(TEXT "${ALGOLIB}/text")
 
 set(GEOMETRY_SOURCES
@@ -58,9 +59,10 @@ set(SEQUENCES_SOURCES
     "${SEQUENCES}/sorting.cpp")
 set(STRUCTURES_SOURCES
     "${STRUCTURES}/avl_tree.cpp"
-    "${STRUCTURES}/disjoint_sets.cpp"
-    "${STRUCTURES}/double_heap.cpp"
-    "${STRUCTURES}/pairing_heap.cpp")
+    "${STRUCTURES}/disjoint_sets.cpp")
+set(STRUCTURES_HEAPS_SOURCES
+    "${STRUCTURES_HEAPS}/double_heap.cpp"
+    "${STRUCTURES_HEAPS}/pairing_heap.cpp")
 set(TEXT_SOURCES
     "${TEXT}/base_words_map.cpp"
     "${TEXT}/edit_distance.cpp"
@@ -77,6 +79,7 @@ set(SOURCES
     "${MATHS_SOURCES}"
     "${SEQUENCES_SOURCES}"
     "${STRUCTURES_SOURCES}"
+    "${STRUCTURES_HEAPS_SOURCES}"
     "${TEXT_SOURCES}")
 
 # OUTPUT
