Main directory in tests

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -9,62 +9,53 @@ set(THREADS_PREFER_PTHREAD_FLAG true)
 find_package(Threads REQUIRED)
 
 # SOURCES
-set(GEOMETRY_TEST "geometry")
-set(GEOMETRY_DIM2_TEST "${GEOMETRY_TEST}/dim2")
-set(GEOMETRY_DIM3_TEST "${GEOMETRY_TEST}/dim3")
-set(GRAPHS_TEST "graphs")
-set(GRAPHS_ALGORITHMS_TEST "${GRAPHS_TEST}/algorithms")
-set(MATHS_TEST "maths")
-set(SEQUENCES_TEST "sequences")
-set(STRUCTURES_TEST "structures")
-set(TEXT_TEST "text")
-
 set(GEOMETRY_DIM2_TEST_SOURCES
-    "${GEOMETRY_DIM2_TEST}/closest_points_test.cpp"
-    "${GEOMETRY_DIM2_TEST}/convex_hull_test.cpp"
-    "${GEOMETRY_DIM2_TEST}/geometry_2d_test.cpp"
-    "${GEOMETRY_DIM2_TEST}/vector_2d_test.cpp")
+    "${GEOMETRY_DIM2}/closest_points_test.cpp"
+    "${GEOMETRY_DIM2}/convex_hull_test.cpp"
+    "${GEOMETRY_DIM2}/geometry_2d_test.cpp"
+    "${GEOMETRY_DIM2}/vector_2d_test.cpp")
 set(GEOMETRY_DIM3_TEST_SOURCES
-    "${GEOMETRY_DIM3_TEST}/geometry_3d_test.cpp"
-    "${GEOMETRY_DIM3_TEST}/vector_3d_test.cpp")
+    "${GEOMETRY_DIM3}/geometry_3d_test.cpp"
+    "${GEOMETRY_DIM3}/vector_3d_test.cpp")
 set(GRAPHS_TEST_SOURCES
-    "${GRAPHS_TEST}/directed_graph_test.cpp"
-    "${GRAPHS_TEST}/multipartite_graph_test.cpp"
-    "${GRAPHS_TEST}/tree_graph_test.cpp"
-    "${GRAPHS_TEST}/undirected_graph_test.cpp")
+    "${GRAPHS}/directed_graph_test.cpp"
+    "${GRAPHS}/multipartite_graph_test.cpp"
+    "${GRAPHS}/tree_graph_test.cpp"
+    "${GRAPHS}/undirected_graph_test.cpp")
 set(GRAPHS_ALGORITHMS_TEST_SOURCES
-    "${GRAPHS_ALGORITHMS_TEST}/cutting_test.cpp"
-    "${GRAPHS_ALGORITHMS_TEST}/lowest_common_ancestor_test.cpp"
-    "${GRAPHS_ALGORITHMS_TEST}/matching_test.cpp"
-    "${GRAPHS_ALGORITHMS_TEST}/minimal_spanning_tree_test.cpp"
-    "${GRAPHS_ALGORITHMS_TEST}/searching_test.cpp"
-    "${GRAPHS_ALGORITHMS_TEST}/shortest_paths_test.cpp"
-    "${GRAPHS_ALGORITHMS_TEST}/strongly_connected_components_test.cpp"
-    "${GRAPHS_ALGORITHMS_TEST}/topological_sorting_test.cpp"
-    "${GRAPHS_ALGORITHMS_TEST}/tree_diameter_test.cpp")
+    "${GRAPHS_ALGORITHMS}/cutting_test.cpp"
+    "${GRAPHS_ALGORITHMS}/lowest_common_ancestor_test.cpp"
+    "${GRAPHS_ALGORITHMS}/matching_test.cpp"
+    "${GRAPHS_ALGORITHMS}/minimal_spanning_tree_test.cpp"
+    "${GRAPHS_ALGORITHMS}/searching_test.cpp"
+    "${GRAPHS_ALGORITHMS}/shortest_paths_test.cpp"
+    "${GRAPHS_ALGORITHMS}/strongly_connected_components_test.cpp"
+    "${GRAPHS_ALGORITHMS}/topological_sorting_test.cpp"
+    "${GRAPHS_ALGORITHMS}/tree_diameter_test.cpp")
 set(MATHS_TEST_SOURCES
-    "${MATHS_TEST}/equation_test.cpp"
-    "${MATHS_TEST}/equation_system_test.cpp"
-    "${MATHS_TEST}/fraction_test.cpp"
-    "${MATHS_TEST}/maths_test.cpp"
-    "${MATHS_TEST}/primes_searching_test.cpp"
-    "${MATHS_TEST}/primes_testing_test.cpp")
+    "${MATHS}/equation_test.cpp"
+    "${MATHS}/equation_system_test.cpp"
+    "${MATHS}/fraction_test.cpp"
+    "${MATHS}/maths_test.cpp"
+    "${MATHS}/primes_searching_test.cpp"
+    "${MATHS}/primes_testing_test.cpp")
 set(SEQUENCES_TEST_SOURCES
-    "${SEQUENCES_TEST}/longest_common_subsequence_test.cpp"
-    "${SEQUENCES_TEST}/longest_increasing_subsequence_test.cpp"
-    "${SEQUENCES_TEST}/maximum_subarray_test.cpp"
-    "${SEQUENCES_TEST}/sorting_test.cpp")
+    "${SEQUENCES}/longest_common_subsequence_test.cpp"
+    "${SEQUENCES}/longest_increasing_subsequence_test.cpp"
+    "${SEQUENCES}/maximum_subarray_test.cpp"
+    "${SEQUENCES}/sorting_test.cpp")
 set(STRUCTURES_TEST_SOURCES
-    "${STRUCTURES_TEST}/avl_tree_test.cpp"
-    "${STRUCTURES_TEST}/disjoint_sets_test.cpp"
-    "${STRUCTURES_TEST}/double_heap_test.cpp"
-    "${STRUCTURES_TEST}/pairing_heap_test.cpp")
+    "${STRUCTURES}/avl_tree_test.cpp"
+    "${STRUCTURES}/disjoint_sets_test.cpp")
+set(STRUCTURES_HEAPS_TEST_SOURCES
+    "${STRUCTURES_HEAPS}/double_heap_test.cpp"
+    "${STRUCTURES_HEAPS}/pairing_heap_test.cpp")
 set(TEXT_TEST_SOURCES
-    "${TEXT_TEST}/base_words_map_test.cpp"
-    "${TEXT_TEST}/edit_distance_test.cpp"
-    "${TEXT_TEST}/knuth_morris_pratt_test.cpp"
-    "${TEXT_TEST}/suffix_array_test.cpp"
-    "${TEXT_TEST}/trie_test.cpp")
+    "${TEXT}/base_words_map_test.cpp"
+    "${TEXT}/edit_distance_test.cpp"
+    "${TEXT}/knuth_morris_pratt_test.cpp"
+    "${TEXT}/suffix_array_test.cpp"
+    "${TEXT}/trie_test.cpp")
 
 set(TEST_SOURCES
     "${GEOMETRY_DIM2_TEST_SOURCES}"
@@ -74,6 +65,7 @@ set(TEST_SOURCES
     "${MATHS_TEST_SOURCES}"
     "${SEQUENCES_TEST_SOURCES}"
     "${STRUCTURES_TEST_SOURCES}"
+    "${STRUCTURES_HEAPS_TEST_SOURCES}"
     "${TEXT_TEST_SOURCES}")
 
 # OUTPUT
