--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,19 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wno-unknown-pragmas -O2")
 find_package(GTest)
 find_package(Doxygen)
 
+# DIRECTORY STRUCTURE
+set(ALGOLIB "algolib")
+set(GEOMETRY "${ALGOLIB}/geometry")
+set(GEOMETRY_DIM2 "${GEOMETRY}/dim2")
+set(GEOMETRY_DIM3 "${GEOMETRY}/dim3")
+set(GRAPHS "${ALGOLIB}/graphs")
+set(GRAPHS_ALGORITHMS "${GRAPHS}/algorithms")
+set(MATHS "${ALGOLIB}/maths")
+set(SEQUENCES "${ALGOLIB}/sequences")
+set(STRUCTURES "${ALGOLIB}/structures")
+set(STRUCTURES_HEAPS "${STRUCTURES}/heaps")
+set(TEXT "${ALGOLIB}/text")
+
 # SOURCES
 include_directories(${INCLUDE_DIR})
 
